# atcoder-bingo

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/script/: run_backend.sh
backend/src/: crawler.rs  database.rs
backend/src/crawler/: api.rs  problems.rs  submissions.rs
backend/src/crawler/problems/: problem_difficulty.rs  problem_info.rs
backend/src/database/: models.rs  problem.rs  user_status.rs
backend/templates/: index.html
config/: run_backend.sh
frontend/: .eslintrc.json  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html  index.js
frontend/src/: index.html  index.js
initdb/: create_tables.sql
src/: bingo_generator.rs  crawler.rs  database.rs  lib.rs  main.rs
src/api/: problems.rs
src/api/problems/: problem_info.rs
src/crawler/: api.rs  bingo_generator.rs  problems.rs
src/crawler/problems/: difficulty.rs  problem_info.rs
static/: commom.css  style.css
templates/: index.html
