[package]
name = "atcoder-bingo-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
reqwest = { version = "0.11.10", features = ["gzip"] }
serde = "1.0.136"
tokio = { version = "1.17.0", features = ["full"] }
