[package]
name = "atcoder-bingo-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0.56"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
log = "0.4.17"
postgres-types = { version = "0.2.2", features = ["derive"] }
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["gzip"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tokio-postgres = { version = "0.7.5", features = ["with-chrono-0_4"] }
